--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
-<html></html>
-<head></head>
+<html lang="en"></html>
+<head>
+    l
+    <title>Cat Perry's Favorite Cats</title>
+</head>
 <body></body>
